.churn/clang-tools-extra/test/modularize/Inputs/CompileError/CompileError.dir
{
    "directory name": "llvm-project/clang-tools-extra/test/modularize/Inputs/CompileError",
    "score.sum": 0.00031720873550238375,
    "sha.latest": "a171d248ca34b8b6f8de11d42a83ad981285963a",
    "time.latest": 1717834758.3053198,
    "formatted_time": "2024-06-08 13:49:18.305322",
    "filescores": {
        "HasError.h": 0.0,
        "Level1A.h": 0.0,
        "module.modulemap": 0.02007646631636598
    },
    "subdirscores": {}
}